--- a/package.json
+++ b/package.json
@@ -25,15 +25,53 @@
     }
   ],
   "keywords": [
-    "foo"
+    "app",
+    "boilerplate",
+    "electron",
+    "mobx",
+    "open",
+    "open-source",
+    "react",
+    "reactjs",
+    "source",
+    "webpack"
   ],
   "engines": {
-    "node": ">=8.x",
+    "node": ">=9.x",
     "npm": ">=5.x",
     "yarn": ">=1.x.x"
   },
   "main": "main.js",
-  "scripts": {},
-  "devDependencies": {},
-  "dependencies": {}
+  "scripts": {
+    "build": "webpack --config webpack.build.config.js --mode production",
+    "start": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js  --mode development",
+    "package:all": "npm run build && electron-packager ./ --out=./builds --overwrite --platform=all",
+    "package:linux": "npm run build && electron-packager ./ --out=./builds --overwrite --platform=linux",
+    "package:macappstore": "npm run build && electron-packager ./ --out=./builds --overwrite --platform=mas",
+    "package:osx": "npm run build && electron-packager ./ --out=./builds --overwrite --platform=darwin",
+    "package:win": "npm run build && electron-packager ./ --out=./builds --overwrite --platform=win32",
+    "prod": "npm run build && electron --noDevServer ."
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
+    "css-loader": "^0.28.10",
+    "electron-packager": "^11.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.6",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
+  },
+  "dependencies": {
+    "electron": "^1.8.3",
+    "mobx": "^4.0.2",
+    "mobx-react": "^5.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  }
 }
