--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.10",
     "electron-packager": "^11.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
     "webpack": "^4.1.1",
