--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.11",
     "electron-packager": "^12.0.2",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
