--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "prod": "npm run build && electron --noDevServer ."
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^1.0.0",
     "electron-packager": "^12.1.1",
